# cpsc2376-pierce

./: README.md
practice/practice01/: main.cpp
practice/practice02/: main.cpp
practice/practice03/: fixes.md  practice03.cpp
practice/practice04/: problem1a.cpp  problem2a.cpp  problem3a.cpp
practice/practice05/practice05_1a/: problem1a.cpp
practice/practice05/practice05_2a/: problem2a.cpp
practice/practice05/practice05_3a/: problem3a.cpp
practice/practice06/: Fraction.cpp  Fraction.h  MixedFraction.cpp  MixedFraction.h  main.cpp
practice/practice07/: main.cpp
practice/practice09/: problem1a.cpp  problem2a.cpp
practice/practice10/: main.cpp
practice/practice11/: design.md
practice/practice14/observer/: Averager.h  GradeBook.h  Notifier.h  Observer.h  main.cpp
practice/practice14/strategy/: CensorBadWordsFilter.h  RemoveVowelsFilter.h  ReverseFilter.h  TextFilterStrategy.h  TextProcessor.h  UppercaseFilter.h  main.cpp
projects/project01/: main.cpp
projects/project02/: game.cpp  game.h  main.cpp
projects/project04/: CMakeLists.txt  Engine.cpp  Engine.h  Main.cpp  README.md  game.cpp  game.h
tests/practice03_test/: practice03_test.cpp
